Fix timer being offcenter in small devices

--- a/HTML and CSS/homepage.css
+++ b/HTML and CSS/homepage.css
@@ -82,7 +82,7 @@ a, a:hover, a:active, a:focus, a:visited{
     color: white;
     font-family:"LEMONMILK-Regular";
     font-size: 64px;
-    margin: 150px;
+    margin: 150px 0;
 }
 @keyframes register-box-anim {
     from {
@@ -156,20 +156,20 @@ a, a:hover, a:active, a:focus, a:visited{
     font-size: 18px;
 }
 @media only screen and (max-width: 800px){
-    .banner{
+    .banner {
         display: block;
     }
-    .college-logo img{
+    .college-logo img {
         display: block;
         margin: 0 auto;
         width: 90%;
         height: auto;
     }
-    .banner-right{
+    .banner-right {
         display: block;
         margin: 30px 10%;
     }
-    .xactitude21{
+    .xactitude21 , .timer {
         margin-top: 100px;
     }
 }
